Integrated SurvejJS with login. Started working on mongodb

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Index.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Index.cshtml
@@ -29,7 +29,7 @@
                     data: JSON.stringify({ "username": $('#userName').val(), "password": $('#passWord').val() }),
                     processData: false,
                     success: function(){
-                        window.location.href = "values";
+                        window.location.href = "survey";
                     },
                     error: function (jqXhr, textStatus, errorThrown) {
                         console.log(errorThrown);
