--- a/DentalResearchApp/DentalResearchApp/Views/Survey/Index.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Survey/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
-
+@{ 
+    Layout = "../_Layout.cshtml";
+    ViewBag.Title = "Dental Research App";
+}
 <head>
     <meta charset="utf-8" />
     <title>SurveyJS</title>
