- lille layout ændring

--- a/DentalResearchApp/DentalResearchApp/Views/_Layout.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/_Layout.cshtml
@@ -54,7 +54,7 @@
                 </li>
             </ul>
         </nav>
-        <div id="content">
+        <div id="content" style="width:inherit; height:inherit">
             @RenderBody()
         </div>
     </div>
