- Styling ændringer og lagt _Layout over alle eksisterende views undtagen Log-In

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
@@ -1,21 +1,28 @@
 ﻿<!DOCTYPE html>
 <html>
+@{
+    ViewBag.Title = "Dental Research App";
+}
 <head>
     <link rel="stylesheet" href="/css/Styles.css" type="text/css">
 
     <meta charset="utf-8" />
-    <title>DentalResearchApp</title>
+    <title>Dental Research App</title>
 
 </head>
 <body>
-<div class="box">
-    <h1>Log in</h1>
-    <form method="post" id="loginform">
-        <input type="text" placeholder="Username" name="userName" class="email" id="userName"/>
-        <input type="password" placeholder="Password" name="passWord" class="email" id="passWord"/>
-        <input type="submit" value="Sign in" form="loginform">
-    </form>
-</div>
+    <br />
+    <h1 class="mainHeadline" style="padding-bottom:0px; margin-bottom:0px;">Tandlægehøjskolen Aarhus:<br /> Dental Research App</h1>
+    <br />
+    <div class="box">
+        <h1 class="secondHeadline">Log in</h1>
+        <form method="post" id="loginform">
+            <input type="text" placeholder="Username" name="userName" class="email" id="userName" />
+            <input type="password" placeholder="Password" name="passWord" class="email" id="passWord" />
+            <br />
+            <input type="submit" value="Sign in" form="loginform" style="margin-left: 140px; margin-top: 40px">
+        </form>
+    </div>
     <script src="/js/jquery.min.js"></script>
 
     <script>
@@ -28,7 +35,7 @@
                     contentType: 'application/json',
                     data: JSON.stringify({ "username": $('#userName').val(), "password": $('#passWord').val() }),
                     processData: false,
-                    success: function(){
+                    success: function () {
                         window.location.href = "survey";
                     },
                     error: function (jqXhr, textStatus, errorThrown) {
