--- a/DentalResearchApp/DentalResearchApp/Views/Survey/Index.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Survey/Index.cshtml
@@ -5,7 +5,6 @@
     ViewBag.Title = "Dental Research App";
 }
 <head>
-    <meta charset="utf-8" />
     <title>SurveyJS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -20,8 +19,8 @@
         <div class="sv_custom_header"></div>
         <div class="sv_container">
             <div class="sv_header">
-                <h3>SurveyJS custom service ASP.NET Core example</h3>
-                <p>Below you can see the list of available surveys you can edit, run and see the results</p>
+                <h1>Surveys</h1>
+                <h3>Below you can see the list of available surveys you can edit, run and see the results</h3>
             </div>
             <div class="sv_body">
                 <div id="surveys-list" class="surveys-list">
