--- a/DentalResearchApp/DentalResearchApp/Views/_Layout.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/_Layout.cshtml
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewBag.Title</title>
@@ -20,7 +21,7 @@
             <ul class="list-unstyled components">
                 <p>Dental Research App</p>
                 <li class="active">
-                    <a href="#surveySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Surveys</a>
+                    <a href="#surveySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Surveys <span class="caret"></span></a>
                     <ul class="collapse list-unstyled" id="surveySubmenu">
                         <li>
                             <a href="#">Survey</a>
@@ -37,7 +38,7 @@
                     <a href="#">Results</a>
                 </li>
                 <li>
-                    <a href="#patientsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Patients</a>
+                    <a href="#patientsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Patients <span class="caret"></span></a>
                     <ul class="collapse list-unstyled" id="patientsSubmenu">
                         <li>
                             <a href="#">All Patients</a>
