- Lavet ændringer til routing for login og sådan lidt - Oprettet view til Signup

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
-<html>
 @{
-    ViewBag.Title = "Dental Research App";
+    ViewBag.Title = "Dental Research App - Log In";
 }
+<html>
 <head>
     <link rel="stylesheet" href="/css/Styles.css" type="text/css">
 
     <meta charset="utf-8" />
-    <title>Dental Research App</title>
+    <title>Dental Research App - Log In</title>
 
 </head>
 <body>
