--- a/DentalResearchApp/DentalResearchApp/wwwroot/css/Styles.css
+++ b/DentalResearchApp/DentalResearchApp/wwwroot/css/Styles.css
@@ -7,6 +7,16 @@
     margin: 20px 0px 20px 0px;   
 }
 
+select {
+    font-family: 'Open Sans', sans-serif;
+    margin:0px;
+    border: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom:none;
+}
+
 p{
     font-size:12px;
     text-decoration: none;
@@ -45,13 +55,13 @@ p{
     border-radius:4px;
 }
 
-.password{
-    border-radius:4px;
-    background:#ecf0f1;
+.password {
+    border-radius: 4px;
+    background: #ecf0f1;
     border: #ccc 1px solid;
     padding: 8px;
-    width:250px;
-    font-size:1em;
+    width: 250px;
+    font-size: 1em;
 }
 
 input[type=button], input[type=submit], input[type=reset] {
