Changed charset back to utf-8 and removed danish from page.

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
@@ -6,13 +6,13 @@
 <head>
     <link rel="stylesheet" href="/css/Styles.css" type="text/css">
 
-    <meta charset="US-ASCII" />
+    <meta charset="utf-8" />
     <title>Dental Research App - Log In</title>
 
 </head>
 <body>
     <br />
-    <h1 class="mainHeadline" style="padding-bottom:0px; margin-bottom:0px;">Tandlægehøjskolen Aarhus:<br /> Dental Research App</h1>
+    <h1 class="mainHeadline" style="padding-bottom:0px; margin-bottom:0px;">Department of Dentistry and Oral Health Aarhus:<br /> Dental Research App</h1>
     <br />
     <div class="box">
         <h1 class="secondHeadline">Log in</h1>
