Changed charset back to utf-8 and removed danish from page.

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
@@ -6,7 +6,7 @@
 <head>
     <link rel="stylesheet" href="/css/Styles.css" type="text/css">
 
-    <meta charset="utf-8" />
+    <meta charset="us-ascii" />
     <title>Dental Research App - Log In</title>
 
 </head>
