Trying to fix deploy issues take 3.

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
@@ -14,7 +14,7 @@
     <br />
     <h1 class="mainHeadline" style="padding-bottom:0px; margin-bottom:0px;">Department of Dentistry and Oral Health Aarhus:<br /> Dental Research App</h1>
     <br />
-    <div class="box">
+    @*<div class="box">
         <h1 class="secondHeadline">Log in</h1>
         <form method="post" id="loginform">
             <input type="text" placeholder="Username" name="userName" class="email" id="userName" />
@@ -22,7 +22,7 @@
             <br />
             <input type="submit" value="Sign in" form="loginform" style="margin-left: 140px; margin-top: 40px">
         </form>
-    </div>
+    </div>*@
     <script src="/js/jquery.min.js"></script>
 
     <script>
