Trying to fix deploy issues take 7.

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 @{
     ViewBag.Title = "Dental Research App - Log In";
 }
@@ -6,15 +6,15 @@
 <head>
     <link rel="stylesheet" href="/css/Styles.css" type="text/css">
 
-    <meta charset="us-ascii" />
+    <meta charset="utf-8" />
     <title>Dental Research App - Log In</title>
 
 </head>
 <body>
-    <!-- <br />
+    <br />
     <h1 class="mainHeadline" style="padding-bottom:0px; margin-bottom:0px;">Department of Dentistry and Oral Health Aarhus<br /> Dental Research App</h1>
     <br /> -->
-    <!-- <div class="box">
+    <div class="box">
         <h1 class="secondHeadline">Log in</h1>
         <form method="post" id="loginform">
             <input type="text" placeholder="Username" name="userName" class="email" id="userName" />
@@ -22,10 +22,10 @@
             <br />
             <input type="submit" value="Sign in" form="loginform" style="margin-left: 140px; margin-top: 40px">
         </form>
-    </div> -->
-    <!-- <script src="/js/jquery.min.js"></script> -->
+    </div>
+    <script src="/js/jquery.min.js"></script>
 
-    <!-- <script>
+    <script>
         (function ($) {
             function processForm(e) {
                 $.ajax({
@@ -46,7 +46,7 @@
             }
             $('#loginform').submit(processForm);
         })(jQuery);
-    </script> -->
+    </script>
 
 </body>
 </html>
