- Leget med noget Javascript og tilføjet validering af felter og password i SignUp

--- a/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/DentalResearchApp/Views/Login/Login.cshtml
@@ -17,8 +17,8 @@
     <div class="box">
         <h1 class="secondHeadline">Log in</h1>
         <form method="post" id="loginform">
-            <input type="text" placeholder="Username" name="userName" class="email" id="userName" />
-            <input type="password" placeholder="Password" name="passWord" class="email" id="passWord" />
+            <input type="text" placeholder="Username" name="userName" class="inputField" id="userName" />
+            <input type="password" placeholder="Password" name="passWord" class="inputField" id="passWord" />
             <br />
             <input type="submit" value="Sign in" form="loginform" style="margin-left: 140px; margin-top: 40px">
         </form>
