Implemented functionality to save and retrieve survey results from database.

--- a/DentalResearchApp/Views/Survey/Results.cshtml
+++ b/DentalResearchApp/Views/Survey/Results.cshtml
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/survey-knockout"></script>
     <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="/css/Index.css" />
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     </a>
     <div class="survey-page-header">
         <div class="sv_main survey-page-header-content">
-            <button onclick="window.location = '/'">&lt&nbspBack</button>
+            <button onclick="window.location = '/survey'">&lt&nbspBack</button>
         </div>
     </div>
     <div class="sv_main sv_frame sv_default_css">
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <script src="./js/results.js"></script>
+    <script src="/js/results.js"></script>
 </body>
 
 </html>
