--- a/DentalResearchApp/Views/Survey/Index.cshtml
+++ b/DentalResearchApp/Views/Survey/Index.cshtml
@@ -35,7 +35,7 @@
                                 <td>
                                     <a class="sv_button_link" data-bind="attr: { href: 'surveyrunner?id=' + ko.unwrap(id) }">Run</a>
                                     <a class="sv_button_link" data-bind="attr: { href: 'editor?id=' + ko.unwrap(id) }">Edit</a>
-                                    <a class="sv_button_link" data-bind="attr: { href: 'results.html?id=' + ko.unwrap(id) }">Results</a>
+                                    <a class="sv_button_link" data-bind="attr: { href: 'survey/results?id=' + ko.unwrap(id) }">Results</a>
                                     <span class="sv_button_link sv_button_delete" data-bind="click: function() { $parent.deleteSurvey(ko.unwrap(id), $parent.loadSurveys); }">Delete</span>
                                 </td>
                             </tr>
