--- a/DentalResearchApp/Views/SurveyRunner/SurveyRunner.cshtml
+++ b/DentalResearchApp/Views/SurveyRunner/SurveyRunner.cshtml
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-@{ 
+<html>
+@{
     Layout = "../_Layout.cshtml";
     ViewBag.Title = "Dental Research App";
 }
-<html>
+
 
 <head>
     <title>Welcome to SurveyJS</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
     <script src="https://unpkg.com/survey-knockout"></script>
     <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="css/Index.css" />
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 
 <body>
@@ -21,8 +26,6 @@
     </div>
     <div id="surveyElement">
     </div>
-
-</body>
-
-</html>
 <script src="/js/surveyrunner.js"></script>
+</body>
+</html>
