Started work on personal survey links

--- a/DentalResearchApp/Views/Login/Login.cshtml
+++ b/DentalResearchApp/Views/Login/Login.cshtml
@@ -29,7 +29,7 @@
         (function ($) {
             function processForm(e) {
                 $.ajax({
-                    url: "AuthCookie",
+                    url: "Cookie/Login",
                     dataType: 'json',
                     type: 'post',
                     contentType: 'application/json',
