--- a/DentalResearchApp/Views/SurveyRunner/SurveyRunnerIndex.cshtml
+++ b/DentalResearchApp/Views/SurveyRunner/SurveyRunnerIndex.cshtml
@@ -1,14 +1,12 @@
 ﻿<!DOCTYPE html>
 <html>
 @{
-    Layout = "../_Layout.cshtml";
     ViewBag.Title = "Dental Research App";
 }
 
 
 <head>
-    <title>Welcome </title>
-    <link rel="stylesheet" href="css/Index.css" />
+    <link rel="stylesheet" href="/css/Styles.css" type="text/css">
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
@@ -20,8 +18,8 @@
     <div class="sv_custom_header"></div>
     <div class="sv_container">
         <div class="sv_header">
-            <h1>Surveys</h1>
-            <h3>Hello</h3>
+            <h1>Hello</h1>
+            <h3>Click the button to start the survey</h3>
         </div>
         <div class="sv_body">
             <div class="sv_main survey-page-header-content">
