--- a/DentalResearchApp/Views/SurveyRunner/SurveyRunnerIndex.cshtml
+++ b/DentalResearchApp/Views/SurveyRunner/SurveyRunnerIndex.cshtml
@@ -1,34 +1,25 @@
 ﻿<!DOCTYPE html>
-<html>
 @{
-    ViewBag.Title = "Dental Research App";
+    ViewBag.Title = "Dental Research App - Log In";
 }
-
-
+<html>
 <head>
     <link rel="stylesheet" href="/css/Styles.css" type="text/css">
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/surveyrunnerindex.js"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <meta charset="utf-8" />
+    <title>Survey</title>
 </head>
-
 <body>
-<div class="sv_main sv_frame sv_default_css">
-    <div class="sv_custom_header"></div>
-    <div class="sv_container">
-        <div class="sv_header">
-            <h1>Hello</h1>
-            <h3>Click the button to start the survey</h3>
-        </div>
-        <div class="sv_body">
-            <div class="sv_main survey-page-header-content">
-                <button onclick= "verifyLink();">Start survey</button>
-            </div>
-        </div>
+    <br />
+    <h1 class="mainHeadline" style="padding-bottom:0px; margin-bottom:0px;">Department of Dentistry and Oral Health Aarhus<br /> Dental Research App</h1>
+    <br />
+    <div class="box">
+        <h1 class="secondHeadline">Click to start survey</h1>
+        <button class="button" style="margin-left: 140px; margin-top: 40px" onclick="verifyLink();">Start survey</button>
     </div>
-</div>
-<script src="/js/surveyrunnerindex.js"></script>
-</body>
 
+
+</body>
 </html>
