- Implementeret SurveyResults/AllResults View      - Virker nu med rigtig population af navne - Lavet layout for navbar om en smule

--- a/DentalResearchApp/Views/Link/SendSurvey.cshtml
+++ b/DentalResearchApp/Views/Link/SendSurvey.cshtml
@@ -17,8 +17,9 @@
 <body>
 <div class="box">
     <h2 class="secondHeadline" style="text-align: center">Send Survey</h2>
+    <hr/>
     <br/>
-    @using (Html.BeginForm("CreateLink", "Link", FormMethod.Post))
+    @using (Html.BeginForm("SendSurveyLink", "Link", FormMethod.Post))
     {
         <div style="text-align: center">
             <div>
