- pull-request ændringer

--- a/DentalResearchApp/Views/Survey/SurveyResults.cshtml
+++ b/DentalResearchApp/Views/Survey/SurveyResults.cshtml
@@ -8,10 +8,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    
+    <link rel="stylesheet" href="../wwwroot/js/3rdParty/bootstrap.min.js" />
+    <script src="../wwwroot/js/3rdParty/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/Index.css" type="text/css" />
-    <script src="/js/jquery.min.js"></script>
+    <script src="/js/3rdParty/jquery.min.js"></script>
     <title>Dental Research App - All Survey Results</title>
 </head>
 <body>
