--- a/DentalResearchApp/Views/Survey/SurveyResults.cshtml
+++ b/DentalResearchApp/Views/Survey/SurveyResults.cshtml
@@ -7,14 +7,15 @@
 
 <html>
 <head>
-    <meta charset="utf-8" />
-    
-    <link rel="stylesheet" href="../wwwroot/js/3rdParty/bootstrap.min.js" />
-    <script src="../wwwroot/js/3rdParty/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/Index.css" type="text/css" />
-    <script src="/js/3rdParty/jquery.min.js"></script>
+    <link rel="stylesheet" href="../css/3rdParty/bootstrap.min.css" />
+    <script type="text/javascript" src="../js/3rdParty/jquery.min.js"></script>
+    <script src="../js/3rdParty/bootstrap.min.js"></script>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="/css/Index.css" type="text/css"/>
+
     <title>Dental Research App - All Survey Results</title>
 </head>
+
 <body>
     <div class="col-lg-12, col-md-12, col-xs-12">
         <h1 class="secondHeadline" style="text-align: center">All Results</h1>
