--- a/DentalResearchApp/Views/Editor/Editor.cshtml
+++ b/DentalResearchApp/Views/Editor/Editor.cshtml
@@ -6,19 +6,19 @@
 }
 <head>
     <title>SurveyJS Editor</title>
-    <script src="./js/3rdParty/ace.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="./js/3rdParty/worker-json.js" type="text/javascript" charset="utf-8"></script>
-    <script src="./js/3rdParty/mode-json.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/worker-json.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/mode-json.js" type="text/javascript" charset="utf-8"></script>
 
-    <link rel="stylesheet" href="./css/3rdParty/bootstrap.min.css" />
-    <script type="text/javascript" src="./js/3rdParty/jquery.min.js"></script>
-    <script src="./js/3rdParty/bootstrap.min.js"></script>
-    <script src="./js/3rdParty/knockout-debug.js"></script>
-    <script src="./js/3rdParty/survey.ko.js"></script>
-    <link rel="stylesheet" href="~/css/3rdParty/survey.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-debug.js"></script>
+    <script src="https://unpkg.com/survey-knockout"></script>
+    <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
 
-    <script src="~/js/3rdParty/surveyeditor.js"></script>
-    <link rel="stylesheet" href="./css/3rdParty/surveyeditor.css" />
+    <script src="https://unpkg.com/surveyjs-editor"></script>
+    <link rel="stylesheet" href="https://unpkg.com/surveyjs-editor/surveyeditor.css" />
     <link rel="stylesheet" href="./css/index.css" />
 </head>
 
