--- a/DentalResearchApp/Views/Survey/Index.cshtml
+++ b/DentalResearchApp/Views/Survey/Index.cshtml
@@ -6,11 +6,11 @@
 }
 <head>
     <title>SurveyJS</title>
-    <link rel="stylesheet" href="./css/3rdParty/bootstrap.min.css" />
-    <script type="text/javascript" src="./js/3rdParty/jquery.min.js"></script>
-    <script src="./js/3rdParty/bootstrap.min.js"></script>
-    <script src="./js/3rdParty/knockout-debug.js"></script>
-    <link rel="stylesheet" href="./css/3rdParty/survey.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-debug.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
     <link rel="stylesheet" href="/css/Index.css" type="text/css">
 </head>
 
