--- a/DentalResearchApp/Views/Link/SendSurvey.cshtml
+++ b/DentalResearchApp/Views/Link/SendSurvey.cshtml
@@ -8,17 +8,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./css/3rdParty/bootstrap.min.css" />
-    <script type="text/javascript" src="./js/3rdParty/jquery.min.js"></script>
-    <script src="./js/3rdParty/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/Index.css" type="text/css">
     <title>Dental Research App - Send Survey</title>
 </head>
 <body>
 <div class="box">
     <h2 class="secondHeadline" style="text-align: center">Send Survey</h2>
+    <hr/>
     <br/>
-    @using (Html.BeginForm("CreateLink", "Link", FormMethod.Post))
+    @using (Html.BeginForm("SendSurveyLink", "Link", FormMethod.Post))
     {
         <div style="text-align: center">
             <div>
