--- a/DentalResearchApp/Views/SurveyRunner/SurveyRunner.cshtml
+++ b/DentalResearchApp/Views/SurveyRunner/SurveyRunner.cshtml
@@ -7,14 +7,14 @@
 
 <head>
     <title>Welcome to SurveyJS</title>
-    <script src="./js/3rdParty/knockout-min.js"></script>
-    <script src="~/js/3rdParty/survey.ko.js"></script>
-    <link rel="stylesheet" href="./css/3rdParty/survey.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
+    <script src="https://unpkg.com/survey-knockout"></script>
+    <link rel="stylesheet" href="https://unpkg.com/survey-knockout/survey.css" />
     <link rel="stylesheet" href="css/Index.css" />
 
-    <script src="./js/3rdParty/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/3rdParty/bootstrap.min.css" />
-    <script type="text/javascript" src="./js/3rdParty/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 
 <body>
