--- a/DentalResearchApp/Views/_Layout.cshtml
+++ b/DentalResearchApp/Views/_Layout.cshtml
@@ -14,76 +14,48 @@
 <body>
     <div class="wrapper">
         <nav id="sidebar">
-            <div class="sidebar-header" style="text-align: center">
-                <h3>Tandlægehøjskolen Aarhus</h3>
+            <div class="" style="text-align: center">
+                <h4>Tandlægehøjskolen Aarhus</h4>
             </div>
-            <ul class="list-unstyled components">
-                <p>Dental Research App</p>
-                <li class="active">
+            <hr/>
+            <ul class="list-unstyled">
+                <li>
+                    @Html.ActionLink("Home", "HomePage", "HomePage")
+                </li>
+            </ul>
+            <hr/>
+            <ul class="list-unstyled">
+                    <li>
                     <a href="#surveySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Surveys <span class="caret"></span></a>
                     <ul class="collapse list-unstyled" id="surveySubmenu">
                         <li>
-                            <a href="#">Editor</a>
-                        </li>
-                    </ul>
-                    <a href="#AllStudiesSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">All Studies <span class="caret"></span></a>
-                    <ul class="collapse list-unstyled" id="AllStudiesSubmenu">
-                        <li>
-                            <a href="#PatientSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Patient <span class="caret"></span></a>
-                            <ul class="collapse list-unstyled" id="PatientSubmenu">
-                                <li>
-                                    <a href="#SessionSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Session <span class="caret"></span></a>
-                                    <ul class="collapse list-unstyled" id="SessionSubmenu">
-                                        <li>
-                                            <a href="#">Examinations</a>
-                                            <a href="#">Survey/Results</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+                            @Html.ActionLink("Survey Editor", "Index", "Survey")
+                            @Html.ActionLink("Send Survey", "SendSurvey", "Link")
+                            @Html.ActionLink("All Results", "SurveyResults", "Survey")
                         </li>
                     </ul>
                 </li>
-                <li class="active">
-                    <a href="#AllPatientsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">All Patients <span class="caret"></span></a>
-                    <ul class="collapse list-unstyled" id="AllPatientsSubmenu">
-                        <li>
-                            <a href="#StudySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Study<span class="caret"></span></a>
-                            <ul class="collapse list-unstyled" id="StudySubmenu">
-                                <li>
-                                    <a href="#SessionSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Session <span class="caret"></span></a>
-                                    <ul class="collapse list-unstyled" id="SessionSubmenu">
-                                        <li>
-                                            <a href="#">Examinations</a>
-                                            <a href="#">Survey/Results</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+            </ul>
+            <hr/>
+            <ul class="list-unstyled">
+                <li>
+                    @Html.ActionLink("All Studies", "AllStudies", "Study")
                 </li>
                 <li>
-                    @Html.ActionLink("Send Survey", "SendSurvey", "Link")
+                    @Html.ActionLink("All Patients", "AllPatients", "Patient")
                 </li>
+            </ul>
+            <hr/>
+            <ul class="list-unstyled">
                 <li>
-                    <a href="#">Profile</a>
+                    @Html.ActionLink("Profile", "Profile", "Profile")
                 </li>
+                @if(Context.User.IsInRole("Administrator")) //Todo: User-Role skal findes, laver admin tjek for navbar
+                {
                 <li>
-                    <a href="#AdminSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Admin <span class="caret"></span></a>
-                    <ul class="collapse list-unstyled" id="AdminSubmenu">
-                        <li>
-                            <a href="#">Invite to Site</a>
-                            <a href="#">Manage Users</a>
-                            <a href="#">Manage Patients</a>
-                        </li>
-                    </ul>
-                </li>   
-                <li>
+                    @Html.ActionLink("Admin", "Admin", "Profile")
                 </li>
-                <li>
-                    <a href="#">The Magnificent Pain-O-Meter!!</a>
-                </li>
+                }
             </ul>
         </nav>
         <div id="content" style="width:inherit; height:inherit">
