--- a/DentalResearchApp/Views/Survey/SurveyResults.cshtml
+++ b/DentalResearchApp/Views/Survey/SurveyResults.cshtml
@@ -31,7 +31,7 @@
             {
                 <tr>
                     <td class="customTd">
-                        <a href="Results?id=@item">@item</a>
+                        <a href="/Survey/Results?id=@item">@item</a>
                     </td>
                 </tr>
             }
