--- a/DentalResearchApp/Views/Link/SendSurvey.cshtml
+++ b/DentalResearchApp/Views/Link/SendSurvey.cshtml
@@ -8,10 +8,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./css/3rdParty/bootstrap.min.css" />
-    <script type="text/javascript" src="./js/3rdParty/jquery.min.js"></script>
-    <script src="./js/3rdParty/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/Index.css" type="text/css">
+    <link rel="stylesheet" href="~/css/3rdParty/bootstrap.min.css" />
+    <script type="text/javascript" src="~/js/3rdParty/jquery.min.js"></script>
+    <script src="~/js/3rdParty/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="~/css/Index.css" type="text/css">
     <title>Dental Research App - Send Survey</title>
 </head>
 <body>
