--- a/DentalResearchApp/Views/Survey/SurveyResults.cshtml
+++ b/DentalResearchApp/Views/Survey/SurveyResults.cshtml
@@ -41,8 +41,8 @@
         <div style="text-align: center">
             <label>Choose the format you wish to download the selected Results in:</label>
             <br/>
-            <input type="button" class="button btn-success" onclick="" value="Pdf" /> <!--Todo: Create onclick Method-->
-            <input type="button" class="button btn-success" onclick="" value="Csv" /> <!--Todo: Create onclick Method-->
+            <input type="button" class="btn btn-success" onclick="" value="Pdf" /> <!--Todo: Create onclick Method-->
+            <input type="button" class="btn btn-success" onclick="" value="Csv" /> <!--Todo: Create onclick Method-->
         </div>
         </div>
 </body>
